--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cookie-parser": "1.3.2",
     "cors": "2.8.4",
+    "dotenv": "^6.1.0",
     "express": "4.16.3",
     "firebase": "^5.3.0",
     "firebase-admin": "^6.0.0",
